# evtouch-4point

./: 69-touchscreen.rules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.calibration  TODO  aclocal.m4  calibrator.c  config.h.in  configure  configure.ac  evtouch.c  evtouch.h  index.html  make_distrib.sh
debian/: changelog  control  copyright  docs  evtouch-calibrator.install  evtouch-calibrator.links  files  rules  xserver-xorg-input-evtouch.install
debian/patches/: 06_xf86-input-evtouch-0.8.7-misc.patch  series
src/: .calibrator.c.swp  CMakeLists.txt  calibrator.c
